support/APS-23-31-hubspot-form-styling-and-integration-2:configuration added

--- a/config/crescenttool/default/block.block.webform.yml
+++ b/config/crescenttool/default/block.block.webform.yml
@@ -1,6 +1,6 @@
 uuid: 59ccb0ea-22de-4f29-848f-38eec3bd8934
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - webform.webform.email_sign_up
