--- a/config/gearwrench/default/block.block.webform.yml
+++ b/config/gearwrench/default/block.block.webform.yml
@@ -1,6 +1,6 @@
 uuid: 11cc868a-6df7-4280-a1e8-d6988ac70469
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - webform.webform.email_sign_up
