APEX-139: Product Specification child level migration with mapping.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_de.yml
@@ -53,6 +53,8 @@ process:
     plugin: cleco_create_product_specifications
     source: remote_product_specifications
     langcode: de
+    parent_migration_id: cleco_product_specifications_de
+    migration_id: cleco_product_specifications_list
     allowed_attributes:
       - ATT756190
       - ATT665413
