--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
@@ -41,6 +41,8 @@ process:
     plugin: cleco_create_product_specifications
     source: remote_product_specifications
     langcode: en
+    parent_migration_id: cleco_product_specifications
+    migration_id: cleco_product_specifications_list
     allowed_attributes:
       - ATT756190
       - ATT665413
