APEX-27: Create new account removed, Recaptcha enabled, config ignore updated

--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,7 @@
         "drupal/environment_indicator": "^4.0",
         "drupal/external_hreflang": "^2.0",
         "drupal/extlink": "^1.6",
+        "drupal/facets": "^2.0",
         "drupal/feeds": "^3.0@beta",
         "drupal/feeds_tamper": "^2.0@beta",
         "drupal/field_group": "^3.4",
