--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -28,6 +28,7 @@ module:
   campbell_migrations: 0
   campbell_product_category_filtering: 0
   campbell_where_to_buy: 0
+  captcha: 0
   ckeditor: 0
   classy_paragraphs: 0
   color: 0
@@ -50,6 +51,7 @@ module:
   entity_reference_revisions: 0
   environment_indicator: 0
   environment_indicator_ui: 0
+  facets: 0
   feeds: 0
   field: 0
   field_group: 0
@@ -111,6 +113,7 @@ module:
   purge: 0
   purge_queuer_coretags: 0
   rdf: 0
+  recaptcha: 0
   redirect: 0
   redirect_404: 0
   responsive_image: 0
