--- a/config/campbell/default/user.settings.yml
+++ b/config/campbell/default/user.settings.yml
@@ -1,5 +1,6 @@
 _core:
   default_config_hash: XgCB1l1PxU3u87McSc5eUqSPTBtVSyoqbRWbIptrjRg
+langcode: en
 anonymous: Anonymous
 verify_mail: true
 notify:
@@ -11,8 +12,7 @@ notify:
   register_admin_created: true
   register_no_approval_required: true
   register_pending_approval: true
-register: visitors_admin_approval
+register: admin_only
 cancel_method: user_cancel_block
 password_reset_timeout: 86400
 password_strength: true
-langcode: en
