feature/APEX-158: campbell media center types creation

--- a/config/campbell/default/webform.webform.sign_up.yml
+++ b/config/campbell/default/webform.webform.sign_up.yml
@@ -17,7 +17,7 @@ elements: |-
     '#type': email
     '#title': Email
     '#description': |-
-      <h2>STAY INVOLVED</h2>
+      <h2 class="signup-homepage-header">STAY INVOLVED</h2>
       <strong>Sign up for Campbell News</strong>
     '#title_display': none
     '#description_display': before
