--- a/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
@@ -1,26 +1,22 @@
-uuid: 9818d331-fe2a-4d7d-bdc7-570ecfa28bf5
+uuid: 1a34f236-4066-4e6c-974b-cc72ca5e3b67
 langcode: en
 status: true
 dependencies: {  }
-id: cleco_product_specifications_child_de
+id: cleco_product_model_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications for language de'
+label: 'Product Model content migration for language de'
 source:
-  constants:
-    DESCRIPTION_PREFIX: 'PIM Attribute ID'
-    TEXT: ' | '
-    WEIGHT: 0
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
   urls: 'public://import/pim_data/pim_export_with_schema_de.xml'
   namespaces:
     stibo: 'http://www.stibosystems.com/step'
-  item_selector: '//Product[@UserTypeID="SKU Group"]|//Product[@UserTypeID="SKU"]'
+  item_selector: '//Product[@UserTypeID="SKU"]'
   fields:
     -
       name: remote_sku
@@ -28,27 +24,26 @@ source:
       selector: '@ID'
     -
       name: remote_name
-      label: 'SKU Group'
+      label: 'Product Model Name'
       selector: Name
-    -
-      name: remote_sku_group
-      label: 'SKU Group'
-      selector: Values
     -
       name: remote_product_specifications
       label: 'Product Specifications'
       selector: Values
-    -
-      name: skip_record
-      label: 'Skip Record'
-      selector: skip_record
   ids:
     remote_sku:
       type: string
 process:
+  title:
+    plugin: skip_on_empty
+    method: row
+    source: remote_name
   type:
     plugin: default_value
-    default_value: product
+    default_value: product_model
+  status:
+    plugin: default_value
+    default_value: 1
   product_specifications_array:
     plugin: cleco_create_product_specifications
     source: remote_product_specifications
@@ -56,20 +51,17 @@ process:
     parent_migration_id: cleco_product_specifications_de
     migration_id: cleco_product_specifications_list
     get_predefined_attributelist: 1
-  field_product_specifications:
+  field_model_specification:
     plugin: sub_process
     source: '@product_specifications_array'
     include_source: true
     process:
       vocabulary_id: vid
       target_id: target_id
-  skip:
-    plugin: skip_on_empty
-    method: row
-    source: skip_record
+  langcode:
+    plugin: default_value
+    default_value: de
 destination:
   plugin: 'entity:node'
-  bundle: article
-migration_dependencies:
-  required:
-    - cleco_product_specifications_de
+  bundle: product_model
+migration_dependencies: null
