feature/APEX-158:campbell - added fixed blocks for hero images

--- a/config/campbell/default/block.block.signup_webform.yml
+++ b/config/campbell/default/block.block.signup_webform.yml
@@ -22,7 +22,7 @@ plugin: webform_block
 settings:
   id: webform_block
   label: 'Signup form for Media Center'
-  label_display: visible
+  label_display: '0'
   provider: webform
   webform_id: sign_up
   default_data: ''
@@ -31,4 +31,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /catalogs
+    pages: /media-center/catalogs
