--- a/config/campbell/default/views.view.media_center_pages.yml
+++ b/config/campbell/default/views.view.media_center_pages.yml
@@ -510,7 +510,7 @@ display:
         filter_groups: false
       display_description: ''
       display_extenders: {  }
-      path: brand-elements
+      path: media-center/brand-elements
     cache_metadata:
       max-age: -1
       contexts:
@@ -609,7 +609,7 @@ display:
         filter_groups: false
       display_description: ''
       display_extenders: {  }
-      path: brochures
+      path: media-center/brochures
     cache_metadata:
       max-age: -1
       contexts:
@@ -706,7 +706,7 @@ display:
         filter_groups: false
       display_description: ''
       display_extenders: {  }
-      path: catalogs
+      path: media-center/catalogs
     cache_metadata:
       max-age: -1
       contexts:
@@ -805,7 +805,7 @@ display:
         filter_groups: false
       display_description: ''
       display_extenders: {  }
-      path: reference-material
+      path: media-center/reference-material
     cache_metadata:
       max-age: -1
       contexts:
