--- a/config/campbell/default/block.block.heroimagecontactus.yml
+++ b/config/campbell/default/block.block.heroimagecontactus.yml
@@ -1,23 +1,23 @@
-uuid: 59848d1f-b570-4588-a304-3f1ed44fa229
+uuid: 3ea90ddc-ce26-4de9-b8c4-93829f606d48
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.hero_image_where_to_buy
+    - fixed_block_content.fixed_block_content.hero_image_contact_us
   module:
     - fixed_block_content
     - system
   theme:
     - campbell
-id: heroimagewheretobuy
+id: heroimagecontactus
 theme: campbell
 region: pre_content
-weight: -20
+weight: -19
 provider: null
-plugin: 'fixed_block_content:hero_image_where_to_buy'
+plugin: 'fixed_block_content:hero_image_contact_us'
 settings:
-  id: 'fixed_block_content:hero_image_where_to_buy'
-  label: 'Hero image-Where to buy'
+  id: 'fixed_block_content:hero_image_contact_us'
+  label: 'Hero Image - Contact Us'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /where-to-buy
+    pages: /contact-us
