--- a/config/campbell/default/mailsystem.settings.yml
+++ b/config/campbell/default/mailsystem.settings.yml
@@ -1,10 +1,11 @@
 _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
-theme: current
+theme: campbell
 defaults:
   sender: swiftmailer
   formatter: swiftmailer
 modules:
   swiftmailer:
     none:
+      sender: swiftmailer
       formatter: swiftmailer
