--- a/config/campbell/default/migrate_plus.migration.campbell_products.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_products.yml
@@ -154,7 +154,7 @@ process:
   field_media/target_id: '@listing_image'
   product_images_array:
     source: remote_product_images
-    plugin: apex_get_product_images
+    plugin: campbell_get_product_images
   field_product_images:
     plugin: sub_process
     source: '@product_images_array'
