--- a/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.product.field_product_models
     - field.field.node.product.field_related_products_ref
     - field.field.node.product.field_sku_group
+    - field.field.node.product.field_slug
     - field.field.node.product.field_upc
     - node.type.product
   module:
@@ -49,6 +50,7 @@ hidden:
   field_product_models: true
   field_related_products_ref: true
   field_sku_group: true
+  field_slug: true
   field_upc: true
   langcode: true
   search_api_excerpt: true
