--- a/config/campbell/default/webform.webform.contact_us.yml
+++ b/config/campbell/default/webform.webform.contact_us.yml
@@ -23,10 +23,13 @@ elements: |-
       'Warranty/Replacement Parts/Repair': 'Warranty/Replacement Parts/Repair'
       'Sales Quote': 'Sales Quote'
       'Add/Adjust Your Location Information': 'Add/Adjust Your Location Information'
+    '#required': true
+    '#required_error': 'Select Type field is required.'
   brand:
     '#type': textfield
     '#title': Brand
     '#required': true
+    '#required_error': 'Brand field is required.'
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -35,6 +38,7 @@ elements: |-
     '#type': textfield
     '#title': 'Product Model Number'
     '#required': true
+    '#required_error': 'Product Model Number field is required'
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -62,6 +66,7 @@ elements: |-
     '#type': email
     '#title': 'Email Address'
     '#required': true
+    '#required_error': 'Email Address field is required.'
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -77,21 +82,49 @@ elements: |-
         ':input[name="select_type"]':
           value:
             pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
-  address:
-    '#type': webform_address
+  postal_code:
+    '#type': textfield
+    '#title': 'Postal Code'
+  country:
+    '#type': select
+    '#title': Country
+    '#options': country_names
+    '#required': true
+    '#required_error': 'Country field is required.'
+  address_actual:
+    '#type': textfield
     '#title': Address
     '#required': true
-    '#address__required': true
-    '#address_2__access': false
-    '#city__title': City
-    '#city__required': true
-    '#state_province__required': true
-    '#postal_code__title': 'Postal Code'
-    '#country__required': true
+    '#required_error': 'Address field is required.'
+  city:
+    '#type': textfield
+    '#title': City
+    '#required': true
+    '#required_error': 'City field is required.'
+  state_province:
+    '#type': select
+    '#title': State/Province
+    '#options': state_province_names
+    '#required': true
+    '#required_error': 'State/Province field is required.'
+    '#states':
+      visible:
+        ':input[name="country"]':
+          value: 'United States'
+  state_province_text:
+    '#type': textfield
+    '#title': State/Province
+    '#required': true
+    '#required_error': 'State/Province field is required.'
+    '#states':
+      visible:
+        ':input[name="country"]':
+          '!value': 'United States'
   request_comments:
     '#type': textarea
     '#title': Request/Comments
     '#required': true
+    '#required_error': 'Request/Comments field is required.'
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -100,6 +133,8 @@ elements: |-
   upload_an_excel_document:
     '#type': managed_file
     '#title': 'Upload an excel document'
+    '#required': true
+    '#required_error': 'You have selected an option to attach the document(Add/Adjust Your Location Information) but no file is attached, Please attach '
     '#states':
       visible:
         ':input[name="select_type"]':
@@ -153,12 +188,12 @@ settings:
   form_disable_back: false
   form_submit_back: false
   form_disable_autocomplete: false
-  form_novalidate: false
+  form_novalidate: true
   form_disable_inline_errors: false
   form_required: false
   form_autofocus: false
   form_details_toggle: false
-  form_reset: false
+  form_reset: true
   form_access_denied: default
   form_access_denied_title: ''
   form_access_denied_message: ''
@@ -324,13 +359,13 @@ handlers:
       cc_options: {  }
       from_mail: _default
       from_options: {  }
-      from_name: Campbell
+      from_name: _default
       reply_to: ''
       return_path: ''
       sender_mail: ''
       sender_name: ''
       subject: 'For Campbell : Form submission Contact Us'
-      body: "<p>Submitted on [webform_submission:created]</p>\r\n\r\n<p>Submitted by: [webform_submission:user] [webform_submission:ip-address]</p>\r\n\r\n<p>Submitted values are:</p>\r\n\r\n<p>Business Name:[webform_submission:values:business_name]</p>\r\n\r\n<p>Name: [webform_submission:values:name]</p>\r\n\r\n<p>Email Address: [webform_submission:values:email_address]</p>\r\n\r\n<p>Phone Number: [webform_submission:values:phone_number]</p>\r\n\r\n<p>Postal Code: [webform_submission:values:address:postal_code]</p>\r\n\r\n<p>Country: [webform_submission:values:address:country]</p>\r\n\r\n<p>Address: [webform_submission:values:address]</p>\r\n\r\n<p>City: [webform_submission:values:address:city]</p>\r\n\r\n<p>State/Province: [webform_submission:values:address:state_province]</p>\r\n\r\n<p>Request/Comments: [webform_submission:values:request_comments]</p>\r\n\r\n<p>The results of this submission may be viewed at:[webform_submission:url]</p>"
+      body: "<p>Submitted on [webform_submission:created]</p>\r\n\r\n<p>Submitted by: [webform_submission:user] [webform_submission:ip-address]</p>\r\n\r\n<p>Submitted values are:</p>\r\n\r\n<p>Business Name:[webform_submission:values:business_name]</p>\r\n\r\n<p>Name: [webform_submission:values:name]</p>\r\n\r\n<p>Email Address: [webform_submission:values:email_address]</p>\r\n\r\n<p>Phone Number: [webform_submission:values:phone_number]</p>\r\n\r\n<p>Postal Code: [webform_submission:values:postal_code]</p>\r\n\r\n<p>Country: [webform_submission:values:country]</p>\r\n\r\n<p>Address:[webform_submission:values:address_actual]</p>\r\n\r\n<p>City:[webform_submission:values:city]</p>\r\n\r\n<p>State/Province: [webform_submission:values:state_province][webform_submission:values:state_province_text]</p>\r\n\r\n<p>Request/Comments: [webform_submission:values:request_comments]</p>\r\n\r\n<p>The results of this submission may be viewed at:[webform_submission:url]</p>"
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
