--- a/config/campbell/default/block.block.heroimageaboutus.yml
+++ b/config/campbell/default/block.block.heroimageaboutus.yml
@@ -1,23 +1,23 @@
-uuid: 3e968b10-df07-433c-a9d8-4a7358b328a9
+uuid: e258fc16-a8bf-41aa-85d9-4ff6102e40f6
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.hero_image_catalogs
+    - fixed_block_content.fixed_block_content.hero_image_about_us
   module:
     - fixed_block_content
     - system
   theme:
     - campbell
-id: heroimagecatalogs
+id: heroimageaboutus
 theme: campbell
 region: pre_content
-weight: -14
+weight: -22
 provider: null
-plugin: 'fixed_block_content:hero_image_catalogs'
+plugin: 'fixed_block_content:hero_image_about_us'
 settings:
-  id: 'fixed_block_content:hero_image_catalogs'
-  label: 'Hero Image - Catalogs'
+  id: 'fixed_block_content:hero_image_about_us'
+  label: 'Hero Image - About Us'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /media-center/catalogs
+    pages: /about-us
