--- a/config/campbell/default/block.block.pagetitle.yml
+++ b/config/campbell/default/block.block.pagetitle.yml
@@ -9,7 +9,7 @@ dependencies:
 id: pagetitle
 theme: campbell
 region: pre_content
-weight: -19
+weight: -18
 provider: null
 plugin: page_title_block
 settings:
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /about-us
+    pages: "/about-us\r\n/warranty"
