--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_one_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_one_gb.yml
@@ -44,9 +44,9 @@ process:
     source: remote_term_id
     method: row
     value:
-      - W1_877093
-      - W1_877094
-      - W1_877095
+      - Website_718104
+      - Website_718081
+      - Website_718028
   description: term_description
   weight:
     plugin: cleco_get_default_value
