--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_gb.yml
@@ -45,6 +45,7 @@ process:
     migration_id: cleco_product_specifications_list
     # allowed_attributes is populated/fetched from get_predefined_attributelist
     get_predefined_attributelist: 1
+    get_excluded_attributelist: 1
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
