Added UPC field on Modal content

--- a/config/clecotools/default/core.entity_view_display.node.product_model.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product_model.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.product_model.body
     - field.field.node.product_model.field_model_specification
+    - field.field.node.product_model.field_upc
     - node.type.product_model
   module:
     - text
@@ -28,6 +29,14 @@ content:
       link: true
     third_party_settings: {  }
     weight: 102
+    region: content
+  field_upc:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 103
     region: content
   links:
     settings: {  }
