--- a/config/gearwrench/default/webform.webform.warranty_abusers.yml
+++ b/config/gearwrench/default/webform.webform.warranty_abusers.yml
@@ -34,7 +34,7 @@ settings:
   ajax_effect: ''
   ajax_speed: null
   page: true
-  page_submit_path: ''
+  page_submit_path: /admin/warranty-abusers
   page_confirm_path: ''
   page_theme_name: ''
   form_title: both
@@ -127,8 +127,8 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: page
-  confirmation_url: ''
+  confirmation_type: url
+  confirmation_url: /admin/structure/webform/manage/warranty_abusers/results/submissions
   confirmation_title: ''
   confirmation_message: ''
   confirmation_attributes: {  }
