--- a/config/sata_us/default/webform.webform.warranty_abusers.yml
+++ b/config/sata_us/default/webform.webform.warranty_abusers.yml
@@ -34,7 +34,7 @@ settings:
   ajax_effect: ''
   ajax_speed: null
   page: true
-  page_submit_path: ''
+  page_submit_path: /admin/warranty-abusers
   page_confirm_path: ''
   page_theme_name: ''
   form_title: both
