--- a/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
@@ -30,6 +30,10 @@ source:
       name: remote_product_specifications
       label: 'Product Specifications'
       selector: Values
+    -
+      name: remote_product_upc
+      label: 'Product UPC'
+      selector: Values
   ids:
     remote_sku:
       type: string
@@ -61,6 +65,10 @@ process:
   langcode:
     plugin: default_value
     default_value: de
+  field_upc:
+    plugin: apex_get_attribute_value
+    source: remote_product_upc
+    attribute: ATT539
 destination:
   plugin: 'entity:node'
   bundle: product_model
