--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_gb.yml
@@ -19,6 +19,9 @@ source:
     - name: remote_product_specifications
       label: Product Specifications
       selector: Values
+    - name: remote_product_upc
+      label: Product UPC
+      selector: Values
   ids:
     remote_sku:
       type: string
@@ -53,6 +56,10 @@ process:
   langcode:
     plugin: default_value
     default_value: gb
+  field_upc:
+    plugin: apex_get_attribute_value
+    source: remote_product_upc
+    attribute: ATT539
 destination:
   plugin: 'entity:node'
   bundle: product_model
