APS-18: Fixing coding standard errors and using DI

--- a/docroot/modules/custom/apex_common/apex_common.services.yml
+++ b/docroot/modules/custom/apex_common/apex_common.services.yml
@@ -8,6 +8,7 @@ services:
   # Get Abuser emails service
   apex_common.get_abuser_emails:
     class: Drupal\apex_common\GetAbuserEmails
+    arguments: ['@entity_type.manager']
     tags:
       - { name: get_abuser_emails }
 
