--- a/config/gearwrench/default/core.entity_view_display.node.product_category.tile.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_category.tile.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.product_category.field_category_facets
     - field.field.node.product_category.field_classification_id
     - field.field.node.product_category.field_media
+    - field.field.node.product_category.field_meta_tags
     - field.field.node.product_category.field_product_classifications
     - field.field.node.product_category.field_show_set_filter
     - node.type.product_category
@@ -34,13 +35,10 @@ content:
       overlay: ''
       title: ''
       vanilla: false
-      icon: ''
       layout: ''
       view_mode: default
       cache: 0
-      current_view_mode: tile
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -52,13 +50,16 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: '0'
       grid_medium: '0'
       grid_small: '0'
+      breakpoints: {  }
+      current_view_mode: tile
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 0
     region: content
@@ -66,6 +67,7 @@ hidden:
   body: true
   field_category_facets: true
   field_classification_id: true
+  field_meta_tags: true
   field_product_classifications: true
   field_show_set_filter: true
   langcode: true
