[APEX-405] Fix relevant product specification attributes

--- a/config/campbell/default/migrate_plus.migration.campbell_products.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_products.yml
@@ -174,366 +174,144 @@ process:
     plugin: campbell_create_product_specifications
     source: remote_product_specifications
     allowed_attributes:
-      - ATT15738
-      - Amzn
-      - ATT100
-      - ATT101
-      - ATT102
-      - ATT103
-      - ATT104
-      - ATT105
-      - ATT106
-      - ATT107
-      - ATT108
-      - ATT109
-      - ATT15738
-      - ATT16491
-      - ATT17339
-      - ATT180
-      - ATT205
-      - ATT224
-      - ATT225
-      - ATT226
-      - ATT227
-      - ATT491
-      - ATT493
-      - ATT498
       - ATT539
-      - ATT592
-      - ATT781
-      - ATT919
-      - ATT921
-      - ATT922
-      - Brand
-      - Catalog_Number
-      - Category
-      - WebCategoryImage
-      - CustomerPrice
-      - DeliveryUnit
-      - ExternalVideoURL
-      - Flyer_Brochure
-      - ListPrice
-      - MUSAICON
-      - Owners_Manual
-      - ParentsId
-      - Planned_Qty
-      - Planned_Qty_Date
-      - Product_Image
-      - Product_Parent_Id
-      - Product_Sap_Id
-      - Set
-      - Sku
-      - Thd
-      - ATT115
-      - ATT125
-      - ATT128
-      - ATT132
-      - ATT820
-      - ATT844
-      - ATT843
-      - ATT159
-      - ATT530
-      - ATT178
-      - ATT179
-      - DiameterRangeMax
-      - DiameterRangeMin
-      - ATT840
-      - ATT839
-      - ATT835
-      - ATT484
-      - ATT499
-      - ATT190
-      - ATT466
-      - ATT468
-      - ATT470
-      - ATT478
-      - ATT467
-      - ATT469
-      - ATT471
-      - ATT473
-      - ATT475
-      - ATT481
-      - ATT472
-      - ATT474
-      - ATT590
-      - ATT201
-      - ATT934
-      - ATT841
-      - ATT631
-      - ATT547
-      - ATT228
-      - ATT235
-      - ATT236
-      - ATT239
-      - ATT584
-      - ATT254
-      - ATT256
-      - ATT258
-      - ATT259
-      - ATT710
-      - ATT593
-      - ATT591
-      - ATT609
-      - ATT607
-      - ATT608
-      - ATT606
-      - ATT550
-      - ATT586
-      - ATT587
-      - ATT588
-      - ATT589
-      - ATT351
-      - ATT496
-      - ATT497
-      - ATT15068
-      - ATT549
-      - ATT836
-      - ATT414
-      - ATT415
-      - ATT833
-      - ATT410
-      - ATT532
-      - ATT585
-      - ATT837
-      - ATT838
-      - ATT548
-      - ATT450
-      - ATT451
-      - ATT709
-      - ATT301
-      - EndALength
-      - ATT914
-      - ATT915
-      - ATT912
-      - ATT913
-      - ATT619
-      - ATT907
-      - ATT620
-      - ATT636
-      - ATT633
-      - ATT634
-      - ATT635
-      - ATT693
-      - ATT689
-      - ATT708
-      - ATT703
-      - ATT701
-      - ATT702
-      - ForeignTradeCode
-      - ATT326
-      - DrawerSortOrder
-      - ATT344
-      - ATT345
-      - ATT923
-      - DimensionA
-      - ATT943
-      - ATT372
-      - ATT948
-      - ATT387
-      - DrawerDepth
-      - DrawerHeight
-      - DrawerWidth
-      - DrawerLoadWeight
-      - ATT929
-      - ATT938
-      - ATT930
-      - Footnotes
-      - ATT842
-      - ATT950
-      - ATT819
-      - ATT476
-      - ATT818
-      - ATT477
-      - ATT509
-      - ATT510
-      - ATT505
-      - ATT506
-      - ATT507
-      - ATT503
-      - ATT504
-      - ATT931
-      - ATT500
-      - ATT501
-      - ATT502
-      - ATT170
-      - ATT936
-      - ATT479
-      - ATT480
-      - ATT494
-      - ATT495
-      - ATT492
-      - ATT486
-      - ATT551
-      - JawWidthLower
-      - ATT552
-      - JawWidthUpper
-      - ATT565
-      - ATT562
-      - ATT563
-      - ATT232
-      - ATT564
-      - ATT533
-      - ATT196
-      - DrawerDescription
-      - ATT194
-      - ATT210
-      - ATT540
-      - ATT207
-      - ATT541
-      - ATT537
-      - ATT538
-      - ATT534
-      - ATT535
-      - ATT536
-      - ATT895
-      - ATT617
-      - ATT618
-      - ATT614
-      - ATT612
-      - ATT613
-      - ATT610
-      - ATT238
-      - JawThicknessLower
-      - JawThicknessUpper
-      - ATT251
-      - ATT582
-      - ATT583
-      - SAP_SALES_ORG_STATUS
-      - ATT583
-      - ATT584
-      - ATT200
+      - TradeSizeFractional
+      - ATT424
       - ATT217
       - ATT864
-      - ATT865
+      - ATT797
       - ATT802
       - ATT803
-      - ATT797
-      - ATT424
-      - ATT746
-      - TradeSizeFractional
-      - ATT182
-      - ATT336
-      - ATT518
-      - ATT517
-      - ATT375
-      - CasePackQty
-      - BaseUnitOfMeasure
-      - UnitsOfMeasure
-      - ATT113
-      - ATT121
-      - ATT123
-      - ATT137
-      - ATT138
-      - ATT139
-      - ATT140
-      - ATT143
-      - ATT145
-      - ATT146
-      - ATT147
-      - ATT155
-      - ATT157
-      - ATT168
-      - ATT187
-      - ATT198
-      - ATT212
-      - ATT214
-      - ATT219
-      - ATT222
-      - ATT245
-      - ATT247
-      - ATT249
-      - ATT250
-      - ATT274
-      - ATT286
-      - ATT288
+      - ATT805
+      - ATT798
       - ATT291
-      - ATT315
-      - ATT320
-      - ATT325
-      - ATT327
-      - ATT335
-      - ATT362
-      - ATT363
-      - ATT364
-      - ATT376
-      - ATT400
-      - ATT405
-      - ATT425
-      - ATT439
-      - ATT440
-      - ATT442
-      - ATT443
-      - ATT447
-      - ATT453
-      - ATT454
+      - TorqueValue
+      - ATT776
+      - ATT345
+      - ATT214
+      - ATT817
+      - ATT858
+      - ATT859
+      - Quik-AlloySlingHooks
+      - Quik-AlloySlingHookwithLatch
+      - ATT205
+      - ATT770
+      - ATT460
       - ATT457
       - ATT458
       - ATT459
-      - ATT460
-      - ATT515
-      - ATT545
-      - ATT546
-      - ATT621
-      - ATT688
-      - ATT734
-      - ATT743
-      - ATT744
-      - ATT745
+      - ATT777
+      - ATT778
+      - ATT790
+      - ATT789
+      - ATT336
+      - ATT861
+      - ATT804
+      - ATT807
+      - ATT808
+      - ATT809
       - ATT748
       - ATT749
       - ATT750
       - ATT751
-      - ATT752
-      - ATT753
-      - ATT754
-      - ATT756
-      - ATT757
-      - ATT758
-      - ATT763
-      - ATT764
-      - ATT766
-      - ATT767
-      - ATT770
-      - ATT772
-      - ATT773
+      - ATT688
       - ATT774
       - ATT775
-      - ATT777
-      - ATT778
-      - ATT780
-      - ATT782
-      - ATT783
-      - ATT784
-      - ATT785
-      - ATT786
-      - ATT787
-      - ATT788
-      - ATT789
-      - ATT790
       - ATT791
+      - ATT758
       - ATT792
       - ATT793
+      - ATT810
+      - ATT799
+      - ATT757
+      - ATT800
+      - ATT811
       - ATT794
       - ATT795
-      - ATT799
-      - ATT800
       - ATT801
-      - ATT804
-      - ATT805
-      - ATT806
-      - ATT807
-      - ATT808
-      - ATT809
-      - ATT810
-      - ATT811
-      - ATT853
-      - ATT854
-      - ATT855
-      - ATT856
-      - ATT858
-      - ATT859
-      - ATT860
-      - ATT861
+      - ATT440
+      - ATT395
+      - ATT168
+      - ATT198
+      - ATT274
+      - ATT249
+      - ATT250
+      - ATT545
+      - ATT546
+      - ATT405
+      - ATT447
+      - ATT442
+      - ATT326
+      - ATT923
+      - ATT200
+      - ATT145
+      - ATT425
+      - ATT137
+      - ATT138
+      - ATT315
+      - ATT212
+      - ATT363
+      - ATT364
+      - ATT767
+      - ATT453
+      - ATT288
+      - ATT325
+      - ATT773
+      - ATT362
+      - ATT766
+      - ATT764
+      - ATT143
+      - ATT763
+      - ATT376
+      - ATT147
+      - ATT146
+      - ATT187
+      - ATT786
+      - ATT785
+      - ATT784
+      - ATT783
+      - ATT782
+      - ATT349
+      - ATT335
+      - ATT779
+      - ATT329
+      - ATT400
+      - ATT250
+      - ATT752
+      - ATT908
+      - ATT781
+      - ATT320
+      - ATT780
+      - ATT245
+      - ATT454
+      - ATT753
+      - ATT247
+      - ATT182
+      - ATT745
+      - ATT788
+      - ATT139
+      - ATT140
+      - ATT746
+      - ATT621
+      - ATT330
+      - ATT754
+      - ATT222
+      - ATT225
+      - ATT460
+      - ATT918
+      - ATT327
+      - ATT123
+      - ATT121
+      - ATT286
+      - ATT113
+      - ATT157
+      - ATT937
+      - ATT154
+      - ATT865
+      - ATT857
+      - ATT219
+      - ATT916
+      - ATT917
       - ATT862
       - ATT863
       - ATT867
@@ -545,27 +323,14 @@ process:
       - ATT873
       - ATT874
       - ATT875
-      - ATT876
+      - ATT853
+      - ATT854
       - ATT877
       - ATT878
-      - ATT883
-      - ATT901
-      - ATT908
-      - ATT916
-      - ATT917
-      - ATT918
-      - ATT937
-      - Quik-AlloySlingHooks
-      - Quik-AlloySlingHookwithLatch
-      - ATT583415
-      - ATT27964
-      - ATT378
-      - ATT395
-      - ATT669088
-      - ATT672481
-      - ATT672479
-      - ATT672478
-      - Replacement
+      - ATT855
+      - ATT856
+      - ATT806
+      - MUSAICON
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
